--- a/ipu/templates/account/landing.html
+++ b/ipu/templates/account/landing.html
@@ -13,13 +13,409 @@
 {% block content %}
 <div id="modal1" class="modal bottom-sheet">
     <div class="modal-content">
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
+      <h5>University School of Information & Communication Technology</h5>
+      <h6>Last year placement record :</h6>
+      <table class="bordered">
+        <thead>
+          <tr>
+              <th data-field="companies">Companies</th>
+              <th data-field="jobs">Jobs offered</th>
+              <th data-field="package">Package</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          
+        </tbody>
+      </table>
     </div>
-    <div class="modal-footer">
-      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-    </div>
+    
 </div>
+
+<div id="modal2" class="modal bottom-sheet">
+    <div class="modal-content">
+      <h5>University School of Law and Legal Studies</h5>
+      <h6>Last year placement record :</h6>
+      <table class="bordered">
+        <thead>
+          <tr>
+              <th data-field="companies">Companies</th>
+              <th data-field="jobs">Jobs offered</th>
+              <th data-field="package">Package</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          
+        </tbody>
+      </table>
+    </div>
+    
+</div>
+
+<div id="modal3" class="modal bottom-sheet">
+    <div class="modal-content">
+      <h5>University School of Management Studies</h5>
+      <h6>Last year placement record :</h6>
+      <table class="bordered">
+        <thead>
+          <tr>
+              <th data-field="companies">Companies</th>
+              <th data-field="jobs">Jobs offered</th>
+              <th data-field="package">Package</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          
+        </tbody>
+      </table>
+    </div>
+    
+</div>
+
+<div id="modal4" class="modal bottom-sheet">
+    <div class="modal-content">
+      <h5>University School of Biotechnology</h5>
+      <h6>Last year placement record :</h6>
+      <table class="bordered">
+        <thead>
+          <tr>
+              <th data-field="companies">Companies</th>
+              <th data-field="jobs">Jobs offered</th>
+              <th data-field="package">Package</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          
+        </tbody>
+      </table>
+    </div>
+    
+</div>
+
+<div id="modal5" class="modal bottom-sheet">
+    <div class="modal-content">
+      <h5>University School of Chemical Technology</h5>
+      <h6>Last year placement record :</h6>
+      <table class="bordered">
+        <thead>
+          <tr>
+              <th data-field="companies">Companies</th>
+              <th data-field="jobs">Jobs offered</th>
+              <th data-field="package">Package</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          
+        </tbody>
+      </table>
+    </div>
+    
+</div>
+
+<!--Affiliated colleges-->
+
+<div id="modal6" class="modal bottom-sheet">
+    <div class="modal-content">
+     <div class="modal-top">
+      <h5>Maharaja Agrasen Institute of Technology</h5>
+      <h6>Website :<a href="http://www.mait.ac.in/" target="_blank">www.mait.ac.in</a> 
+</h6>
+      </div>
+      <h6>Last year placement record :</h6>
+      <table class="bordered">
+        <thead>
+          <tr>
+              <th data-field="companies">Companies</th>
+              <th data-field="jobs">Jobs offered</th>
+              <th data-field="package">Package</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          
+        </tbody>
+      </table>
+    </div>
+    
+</div>
+
+<div id="modal7" class="modal bottom-sheet">
+    <div class="modal-content">
+    <div class="modal-top">
+      <h5>Bhagwan Parshuram Institute of Technology</h5>
+      <h6>Website :<a href="http://www.bpitindia.com/" target="_blank">www.bpitindia.com</a> 
+</h6>
+      </div>
+      <h6>Last year placement record :</h6>
+      <table class="bordered">
+        <thead>
+          <tr>
+              <th data-field="companies">Companies</th>
+              <th data-field="jobs">Jobs offered</th>
+              <th data-field="package">Package</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          
+        </tbody>
+      </table>
+    </div>
+    
+</div>
+
+<div id="modal8" class="modal bottom-sheet">
+    <div class="modal-content">
+    <div class="modal-top">
+      <h5>Northern India Engineering College</h5>
+      <h6>Website :<a href="http://www.niecdelhi.ac.in/" target="_blank">www.niecdelhi.ac.in</a> 
+</h6>
+      </div>
+      <h6>Last year placement record :</h6>
+      <table class="bordered">
+        <thead>
+          <tr>
+              <th data-field="companies">Companies</th>
+              <th data-field="jobs">Jobs offered</th>
+              <th data-field="package">Package</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          
+        </tbody>
+      </table>
+    </div>
+    
+</div>
+
+<div id="modal9" class="modal bottom-sheet">
+    <div class="modal-content">
+    <div class="modal-top">
+      <h5>Govind Ballabh Pant Engineering College</h5>
+      <h6>Website :<a href="http://www.gbpec.edu.in/" target="_blank">www.gbpec.edu.in</a> 
+</h6>
+      </div>
+      <h6>Last year placement record :</h6>
+      <table class="bordered">
+        <thead>
+          <tr>
+              <th data-field="companies">Companies</th>
+              <th data-field="jobs">Jobs offered</th>
+              <th data-field="package">Package</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          
+        </tbody>
+      </table>
+    </div>
+    
+</div>
+
+<div id="modal10" class="modal bottom-sheet">
+    <div class="modal-content">
+    <div class="modal-top">
+      <h5>Maharaja Surajmal Institute of Technology</h5>
+      <h6>Website :<a href="http://www.msit.in/" target="_blank">www.msit.in</a> 
+</h6>
+      </div>
+      <h6>Last year placement record :</h6>
+      <table class="bordered">
+        <thead>
+          <tr>
+              <th data-field="companies">Companies</th>
+              <th data-field="jobs">Jobs offered</th>
+              <th data-field="package">Package</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          
+        </tbody>
+      </table>
+    </div>
+    
+</div>
+
+<div id="modal11" class="modal bottom-sheet">
+    <div class="modal-content">
+    <div class="modal-top">
+      <h5>HMR Institute of Technology & Management</h5>
+      <h6>Website :<a href="http://www.hmritm.org/" target="_blank">www.hmritm.org</a> 
+</h6>
+      </div>
+      <h6>Last year placement record :</h6>
+      <table class="bordered">
+        <thead>
+          <tr>
+              <th data-field="companies">Companies</th>
+              <th data-field="jobs">Jobs offered</th>
+              <th data-field="package">Package</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          
+        </tbody>
+      </table>
+    </div>
+    
+</div>
+
+<div id="modal12" class="modal bottom-sheet">
+    <div class="modal-content">
+    <div class="modal-top">
+      <h5>Guru Tegh Bahadur Institute of Technology</h5>
+      <h6>Website :<a href="http://www.gtbit.org/" target="_blank">www.gtbit.org</a> 
+</h6>
+      </div>
+      <h6>Last year placement record :</h6>
+      <table class="bordered">
+        <thead>
+          <tr>
+              <th data-field="companies">Companies</th>
+              <th data-field="jobs">Jobs offered</th>
+              <th data-field="package">Package</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          
+        </tbody>
+      </table>
+    </div>
+    
+</div>
+
+
+
+
 
 	<div class="slider fullscreen">
 		<ul class="slides">
@@ -147,7 +543,7 @@
 
 					<div class="col s10 m5 l2 offset-s1 college">
 					  <div class="recruiter-logo">
-							<a class="modal-trigger" href="#modal1"><img src="{% static 'images/ipu-logo2.jpg' %}"></a>
+							<a class="modal-trigger" href="#modal2"><img src="{% static 'images/ipu-logo2.jpg' %}"></a>
 						</div>  
 						<div class="college-label center">
 							USLLS
@@ -156,7 +552,7 @@
 					</div>
 					<div class="col s10 m5 l2 offset-s1 college">
 					  <div class="recruiter-logo">
-							<a class="modal-trigger" href="#modal1"><img src="{% static 'images/ipu-logo2.jpg' %}"></a>
+							<a class="modal-trigger" href="#modal3"><img src="{% static 'images/ipu-logo2.jpg' %}"></a>
 						</div>  
 						<div class="college-label center">
 							USMS
@@ -166,7 +562,7 @@
 
 					<div class="col s10 m5 l2 offset-s1 college">
 					  <div class="recruiter-logo">
-							<a class="modal-trigger" href="#modal1"><img src="{% static 'images/ipu-logo2.jpg' %}"></a>
+							<a class="modal-trigger" href="#modal4"><img src="{% static 'images/ipu-logo2.jpg' %}"></a>
 						</div>  
 						<div class="college-label center">
 							USBT
@@ -175,7 +571,7 @@
 					</div>
 					<div class="col s10 m5 l2 offset-s1 college">
 					  <div class="recruiter-logo">
-							<a class="modal-trigger" href="#modal1"><img src="{% static 'images/ipu-logo2.jpg' %}"></a>
+							<a class="modal-trigger" href="#modal5"><img src="{% static 'images/ipu-logo2.jpg' %}"></a>
 						</div>  
 						<div class="college-label center">
 							USCT
@@ -192,7 +588,7 @@
 					
 					<div class="col s10 m5 l1 offset-s1 college">
 					  <div class="recruiter-logo">
-							<a class="modal-trigger" href="#modal1"><img src="{% static 'images/MAIT-Logo.png' %}"></a>
+							<a class="modal-trigger" href="#modal6"><img src="{% static 'images/MAIT-Logo.png' %}"></a>
 						</div>  
 						<div class="afcollege-label center">
 							Maharaja Agrasen Institute of Technology
@@ -202,7 +598,7 @@
 
 					<div class="col s10 m5 l1 offset-s1 college">
 					  <div class="recruiter-logo">
-							<a class="modal-trigger" href="#modal1"><img src="{% static 'images/bpit.png' %}"></a>
+							<a class="modal-trigger" href="#modal7"><img src="{% static 'images/bpit.png' %}"></a>
 						</div>  
 						<div class="afcollege-label center">
 							Bhagwan Pashuram Institute of Technology
@@ -212,7 +608,7 @@
 
 					<div class="col s10 m5 l1 offset-s1 college">
 					  <div class="recruiter-logo">
-							<a class="modal-trigger" href="#modal1"><img src="{% static 'images/niec_logo.png' %}"></a>
+							<a class="modal-trigger" href="#modal8"><img src="{% static 'images/niec_logo.png' %}"></a>
 						</div>  
 						<div class="afcollege-label center">
 							Northern <br> India Engineering College
@@ -222,7 +618,7 @@
 
 					<div class="col s10 m5 l1 offset-s1 college">
 					  <div class="recruiter-logo">
-							<a class="modal-trigger" href="#modal1"><img src="{% static 'images/Gb.jpg' %}"></a>
+							<a class="modal-trigger" href="#modal9"><img src="{% static 'images/Gb.jpg' %}"></a>
 						</div>  
 						<div class="afcollege-label center">
 							Govind Ballabh <br> Pant Engineering College
@@ -231,7 +627,7 @@
 					</div>
 					<div class="col s10 m5 l1 offset-s1 college">
 					  <div class="recruiter-logo">
-							<a class="modal-trigger" href="#modal1"><img src="{% static 'images/msit.jpg' %}"></a>
+							<a class="modal-trigger" href="#modal10"><img src="{% static 'images/msit.jpg' %}"></a>
 						</div>  
 						<div class="afcollege-label center">
 							Maharaja Surajmal Institute of Technology
@@ -240,16 +636,16 @@
 					</div>
 					<div class="col s10 m5 l1 offset-s1 college">
 					  <div class="recruiter-logo">
-							<a class="modal-trigger" href="#modal1"><img src="{% static 'images/HMR.jpg' %}"></a>
+							<a class="modal-trigger" href="#modal11"><img src="{% static 'images/HMR.jpg' %}"></a>
 						</div>  
 						<div class="afcollege-label center">
-							HMR Institute of Technology & Managemen
+							HMR Institute of Technology & Management
 						</div>
 						
 					</div>
 					<div class="col s10 m5 l1 offset-s1 college">
 					  <div class="recruiter-logo">
-							<a class="modal-trigger" href="#modal1"><img src="{% static 'images/GTBIT.png' %}"></a>
+							<a class="modal-trigger" href="#modal12"><img src="{% static 'images/GTBIT.png' %}"></a>
 						</div>  
 						<div class="afcollege-label center">
 							Guru Tegh Bahadur Institute of Technology 
@@ -266,7 +662,7 @@
 			</li>
 		</ul>
 	</div>
-	<a href="{% url 'auth' %}" class="waves-effect waves-light btn-large red text-flow" style="position: fixed; right: 0; bottom: 0;z-index: 5;">Sign In / Sign Up</a>
+	<a href="{% url 'auth' %}" class="waves-effect waves-light btn-large red text-flow" style="position: fixed; right: 0; bottom: 0;z-index: 5;">Login / Sign Up</a>
 {% endblock %}
 
 {% block scripts %}
