Improve functioning acc. to selection criteria
- Add filters against students' application to companies
- Add 'is_barred' field in student/models
- JS tweaks
- Add sms.py which has to be later coverted to celery task and tested once registered on 2factor.in
- Vertical tabs button-like feel

--- a/ipu/static/account/css/base_home_layout.css
+++ b/ipu/static/account/css/base_home_layout.css
@@ -32,9 +32,6 @@ nav .brand-logo {
     margin-top: 10px;
 }
 
-
-
-
 #dropdown2
 {
     width: 250px;
@@ -617,13 +614,15 @@ form#search input {
 }
 
 .vertical-tabs .tabs .active {
-	color: goldenrod !important;
+	color: #1c262f !important;
+	background-color: lightcoral !important;
+	border-radius: 8px;
 }
 
 .vertical-tabs ul.tabs li.tab a:hover {
-	color: deepskyblue !important;
-	background: none !important;
-	opacity: 0.5;
+	color: white !important;
+	background-color: #00bcba !important;
+	border-radius: 8px;
 }
 
 #tabs-data-div > div {
