--- a/ipu/templates/college/home.html
+++ b/ipu/templates/college/home.html
@@ -74,7 +74,7 @@
 			</div>
 		</form>
 	</div>
-	<div id="requests" class="col s12">Data 2</div>
+	<div id="requests" class="col s12"></div>
 
 	<div id="notifications" class="col s12">
 		<div class="vertical-tabs">
