--- a/ipu/templates/student/home.html
+++ b/ipu/templates/student/home.html
@@ -71,7 +71,7 @@
 		<li class="tab col s2"><a href="#qualifications" style="color: #9c27b0 !important">Update Qualifications*</a></li>
 	{% endif %}
 	<li id="apply" class="tab col s2"><a class="active" href="#companies">Companies Visiting</a></li>
-	<li class="tab col s2"><a href="#tab2">Status</a></li>
+<!--	<li class="tab col s2"><a href="#tab2">Status</a></li> -->
 	<li id = "notification" class="tab col s2" url="{% url 'get_notifications' %}"><a href="#notifications">Notification</a></li>
 	<li class="tab col s2"><a href="#settings">Settings</a></li>
 	<li id="session" class="tab col s2"><a href="#sessions">Sessions</a></li>
@@ -79,7 +79,7 @@
 
 {% block tabs_content %}
 	<div id="companies" class="col s12"></div>
-	<div id="tab2" class="col s12">Data 2</div>
+<!--	<div id="tab2" class="col s12">Data 2</div> -->
 	<div id="notifications" class="col s12">
 		<div class="vertical-tabs">
 			<div class="row">
