--- a/ipu/templates/account/auth.html
+++ b/ipu/templates/account/auth.html
@@ -7,7 +7,7 @@
 {% block head %}
 	<link type="text/css" rel="stylesheet" href="{% static 'account/auth.css' %}" />
 	<link type="text/css" rel="stylesheet" href="{% static 'common/css/font-awesome/css/font-awesome.min.css' %}" />
-	<link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" />
+<!--	<link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" /> -->
 {% endblock %}
 
 {% block content %}
