--- a/ipu/templates/company/association_requests.html
+++ b/ipu/templates/company/association_requests.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
-<script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
+<!-- <script src="{% static 'material/js/jquery-2.2.0.js' %}"></script> -->
 {% include 'material/includes/material_js.html' %}
 <style type="text/css">
 	#card-main
@@ -57,7 +57,8 @@
 	
 			</div>
 			{% empty %}
-				<p>No requests at the moment.</p>
+				<b><h1 class="center flow-text teal-text text-accent-4">No requests at the moment.</h1></b>
 		{% endfor %}
 	</div>
 </div>
+<script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
