--- a/ipu/templates/faculty/verify_profile_form.html
+++ b/ipu/templates/faculty/verify_profile_form.html
@@ -9,7 +9,7 @@
 	{% form form=profile_form %}{% endform %}
 	<div class="row">
 		<div class="col s6 offset-s2">
-			<button class="btn btn-waves" type="submit" name="none" value="leave">Ask Student</button>
+			<button class="btn btn-waves" type="submit" name="none" value="leave">Skip</button>
 		</div>
 		<div class="col s4">
 			<button class="btn btn-waves" type="submit" name="true" value="continue">Verify</button>
