--- a/ipu/templates/faculty/verify_qual_form.html
+++ b/ipu/templates/faculty/verify_qual_form.html
@@ -8,7 +8,7 @@
 	{% form form=qual_form %}{% endform %}
 	<div class="row">
 		<div class="col s6 offset-s2">
-			<button class="btn btn-waves" type="submit" name="none" value="leave">Ask Student</button>
+			<button class="btn btn-waves" type="submit" name="none" value="leave">Skip</button>
 		</div>
 		<div class="col s4">
 			<button class="btn btn-waves" type="submit" name="true" value="continue">Verify</button>
