--- a/ipu/templates/account/auth.html
+++ b/ipu/templates/account/auth.html
@@ -12,9 +12,12 @@
 
 {% block content %}
 
+<a id="back" href="/"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
+
 <div class="black_overlay" id="fade"></div>
 
 <div id="corner-buttons" class="hide-on-small-only">
+
       <a href = "javascript:void(0)" class="waves-effect waves-light btn sb" onclick = "document.getElementById('student-sign-up').style.display='flex';document.getElementById('fade').style.display='flex'">sign up as student</a>
       <a href = "javascript:void(0)" class="waves-effect waves-light btn sb" onclick = "document.getElementById('recruiter-sign-up').style.display='flex';document.getElementById('fade').style.display='flex'">sign up as recruiter</a>
 </div>
@@ -86,8 +89,8 @@
            <div class="row">
     	    	 <div class="col s12 m12 l12">
     	      		<ul class="tabs">
-    	        		<li class="tab col s3"><a class="active" href="#test1">Student</a></li>
-    	        		<li class="tab col s3"><a  href="#test2">Other</a></li>
+    	        		<li class="tab col s6 m6 l6"><a class="active" href="#test1">Student</a></li>
+    	        		<li class="tab col s6 m6 l6"><a  href="#test2">Other</a></li>
     	      		</ul>
     	    	 </div>
     	         <div id="test1" class="col s12 m12 l12">
