--- a/ipu/static/account/auth.css
+++ b/ipu/static/account/auth.css
@@ -14,20 +14,20 @@ body {
 
 .navbar-fixed
 {
-  height: 0px;
+	height: 0px;
 }
 
 main
 {
     align-items: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
     padding: 10px;
 }
 main img
 {
-  margin-bottom: 0px;
+	margin-bottom: 0px;
 }
 
 #heading
@@ -37,11 +37,11 @@ main img
 
 #form-box
 {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
+	background-color: white;
+	display: flex;
+	flex-direction: column;
   transition: box-shadow .25s;
-  height: 366px;
+	height: 366px;
   border-radius: 7px;
   width: 40%;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
@@ -201,6 +201,39 @@ main img
       color: black;
     }
 
+    #form-box
+{
+	background-color: white;
+	display: flex;
+	flex-direction: column;
+  transition: box-shadow .25s;
+	height: 366px;
+  border-radius: 7px;
+  min-width: 60%;
+  margin-left: 20%;
+  margin-right: 20%;
+
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+}
+
+@media screen and (max-width: 600px) {
+     
+
+    #form-box
+{
+	background-color: white;
+	display: flex;
+	flex-direction: column;
+  transition: box-shadow .25s;
+	height: 366px;
+  border-radius: 7px;
+  min-width: 99%;
+  margin-left: .5%;
+  margin-right: .5%;
+
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
 
 }
 
